Terraform EKS/2-igw.tf
resource "aws_internet_gateway" "my_vpc_igw" {
  vpc_id = aws_vpc.my_vpc.id
  tags = {
    "Name" = "My VPC IGW"
  }
}
